main.css
/** {
  border: 1px dotted red;
}*/

ul {
  list-style-type: none;
  font-family: 'Raleway', sans-serif;
}

header {
  background: #FA6838;
  padding: 0 10px;
  margin: 0 20px;
}

#discounts {
  margin: 20px 0 0 40px;
}

#discounts li {
  display: inline-block;
  color: #fff;
  font-size: 14px;
  margin: 10px 0;
  padding-left: 15px;
}

#discounts li span {
  padding: 5px;
  background: #C7532B;
  border-radius: 5px;
}

#tieLogo img {
  width: 120px;
  padding-left: 10px;
  margin: 0 40px 0 130px;
  float: left;
}

.navbar li {
  display: inline-block;
  margin-top: 40px;
  margin-left: 20px;
}

.navbar li a {
  text-decoration: none;
}

#signReg {
  float: right;
  margin: 20px 140px 0 0;
  position: relative;

}
#signReg a {
  color: #A0A0A0;
  text-decoration: none;
  font-size:  12px;
  margin-left: 6px;
}

#cartImage {
  background: url('images/sprite@2x.png') no-repeat -45px -16px;
  background-size: 400px 200px;
  width: 14px;
  height: 10px;
  display: inline-block;
  padding-bottom: 2px;
}

#cartSearch {
  position: absolute;
  right: 140px;
  top: 100px;
}

#cart span {
  padding-right: 5px;
}

#cart {
  display: inline-block;
  border: 1px solid #E2E2E2;
  padding: 7px;
  border-radius: 3px;
}

#searchBar {
  display: inline-block;
}

#searchbox {
  position: relative;
}

#searchIcon {
  position: absolute;
  display: inline-block;
  background: url('images/sprite@2x.png') no-repeat -15px -15px;
  background-size: 400px 200px;
  width: 13px;
  height: 13px;
  top: 10px;
}

#tieSection {
  background: #F4F4F4;
  margin: 0 20px;
  height: 400px;
}

#tieSection h1{
  text-align: center;
  font-family: 'Raleway', sans-serif;
  font-size: 50px;
}

.tieImage {
  display: inline-block;
}

.tieImage img {
  width: 70px;
}

.tieImage p {
  padding-left: 14px;
}

.littleBlock {
  display: inline-block;
  margin: 40px 0 0 15px;
}

#column3 {
  margin-left: 80px;
}

.littleBlock img {
  position: relative;
  width: 350px;
}

.littleBlock h3 {
  position: absolute;
  top: 600px;
  margin-left: 250px;
}

blockquote {
  font-size: 35px;
  font-family: 'Raleway', sans-serif;;
  text-align: center;
  margin: 100px 103px 100px 0;
}

blockquote span {
  color: #2B9DFF;
  font-size: 20px;
}

.perforatedLine:before {
  content:"";
  width: 100%;
  height: 9px;
  background-image:url(images/hatch-light@2x.png);
  background-repeat:repeat-x;
  float: left;
  padding: 4px 0;
}

#bottom4 {
  margin-left: 305px;
  padding: 220px 0 0 0;
}

.column4 {
  position: relative;
  display: inline-block;
  margin: 45px 0 0 55px;
}

.column4 h4 {
  padding: 0 0 8px 0;
  margin: 0;
}

.column4 img {
  width: 200px;
}

.column4 p {
  margin: 0;
  width: 200px;
  font-family: 'Raleway', sans-serif;
  font-size: 12px;
}

#weekly {
  position: absolute;
  bottom: -15px;
  right: 1px;
}

#weekly p {
  color: #61B6FF;
}

#loopUs {
  position: absolute;
  bottom: 43px;
}

#quarterly {
  position: absolute;
  bottom: 24px;
  left: 180px;
}

#quarterly p {
  padding-bottom: 14px;
}

#innerBox {
  padding: 5px;
}

#subscribe {
  background: #F3F3F3;
  width: 181px;
  border: none;
  border-radius: 3px;
  padding: 3px;
}

#style {
  position: absolute;
  bottom: -14px;
  left: 365px;
}

#style a {
  color: #61B6FF;
}

.column4 form {
  padding-top: 10px;
}

#button {
  background: #299FFF;
  border: none;
  border-radius: 3px;
  font-family: 'Raleway', sans-serif; 
  font-size: 12px;
  color: #fff;
}

.socialIcons {
  margin-top: 10px
}

#facebook {
  display: inline-block;
  background: url('images/sprite@2x.png') no-repeat -270px 0;
  background-size: 400px 200px;
  width: 35px;
  height: 35px;
  padding-right: 6px;
}

#pinterest {
  display: inline-block;
  background: url('images/sprite@2x.png') no-repeat -270px -40px;
  background-size: 400px 200px;
  width: 35px;
  height: 35px;
  padding-right: 6px;
}

#twitter {
  display: inline-block;
  background: url('images/sprite@2x.png') no-repeat -270px -80px;
  background-size: 400px 200px;
  width: 35px;
  height: 35px;
}

footer {
  position: relative;
  background: #F4F4F4;
  margin-top: 62px;
}

.bottomContainer ul {
  float: left;
  margin-top: 0px;
}

.bottomContainer h6 {
  position: absolute;
  margin-top: 6px;
  top: -40px;
  left: 43px;
  font-size: 14px;
}

.bottomContainer li {
  color: #A2A2A2;
}

#bottomList {
  margin-top: 20px;
}

#shopby {
  position: absolute;
  bottom: 38px;
}

#aboutus {
  position: absolute;
  left: 128px;
  bottom: 58px;
}

#styleguide {
  position: absolute;
  left: 284px;
  bottom: 77px;
}

#help {
  position: absolute;
  left: 425px;
  bottom: 77px;
}

#contactBox {
  float: right;
}

#contactBox {
  position: relative;
  background: #A2AFC0;
  margin: 30px 50px 0 0;
  width: 350px;
  border: 1px solid #8F9BAB;
  border-radius: 3px;
  padding: 15px;
  color: #fff;
}

#contactLink {
  position: absolute;
  right: 36px;
  bottom: 30px;
}

#contactButton {
  background: #33A1FF;
  padding: 10px;
  width: 120px;
  border: none;
  border-radius: 3px;
  color: #fff;
}

.coInfo {
  margin: 172px 0 0 39px;
  display: inline-block;
  color: #8B8B8B;
  font-size: 13px;
}

#copyright {
  display: inline-block;
  margin-right: 30px;
}

#madeBy {
  display: inline-block;
}

